# fakplugins

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  PluginsInterfaces_8h.html  PluginsInterfaces_8h__dep__incl.dot  PluginsInterfaces_8h__incl.dot  PluginsInterfaces_8h_source.html  Plugins_8cpp.html  Plugins_8cpp__incl.dot  Plugins_8h.html  Plugins_8h__dep__incl.dot  Plugins_8h__incl.dot  Plugins_8h_source.html  README.md  README_8md.html  annotated.html  build.sh  classFakPlugins_1_1PluginManager-members.html  classFakPlugins_1_1PluginManager.html  classFakPlugins_1_1PluginManager_a25b50823bb43ce4c0df5fbf100a34fef_cgraph.dot  classFakPlugins_1_1PluginManager_a435b6e8da3de5dbae86332e452ee3370_icgraph.dot  classFakPlugins_1_1PluginManager_a5ab7e35ee5c6fa5dba51a718914a264d_icgraph.dot  classFakPlugins_1_1PluginManager_a6ab396b279117b758c86ba58c1e48795_icgraph.dot  classFakPlugins_1_1PluginManager_a6df2daf93604e0747567233a313a5096_icgraph.dot  classFakPlugins_1_1PluginManager_a8cac68985869786202989827198d947f_cgraph.dot  classFakPlugins_1_1PluginManager_aba3564e0ee0c82fec7a07e6dda2e2f09_cgraph.dot  classFakPlugins_1_1PluginManager_aba3564e0ee0c82fec7a07e6dda2e2f09_icgraph.dot  classes.html  conanfile.py  conceptFakPlugins_1_1IsPlugin.html  concepts.html  dir_000002_000001.html  dir_18b260ba734210a1442b23e9907bd3db.html  dir_18b260ba734210a1442b23e9907bd3db_dep.dot  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.dot  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  (+29 more)
.github/workflows/: cd.yml  ci.yml
cmake/: Doxygen.cmake  Flags.cmake  IntroProject.cmake  config.h.in
docs/: Doxyfile  README.md  test.sh
examples/: 2plugins.cpp  CMakeLists.txt  RendererPlugin.cpp  RendererPlugin2.cpp  RendererPlugin2.h  RendererPlugin3.cpp
include/FakPlugins/: Plugins.h  PluginsInterfaces.h
search/: all_1.js  all_10.js  all_11.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  concepts_0.js  defines_0.js  defines_1.js  files_1.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_a.js  namespaces_0.js  pages_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  typedefs_3.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
src/: Plugins.cpp  main.cpp
